@@ -30,22 +30,19 @@ class WCS_Payment_Tokens extends WC_Payment_Tokens {
 	public static function update_subscription_token( $subscription, $new_token, $old_token ) {
 		$token_payment_gateway = $old_token->get_gateway_id();
 		$payment_meta_table    = self::get_subscription_payment_meta( $subscription, $token_payment_gateway );
-		$token_meta_key        = '';
 
 		// Attempt to find the token meta key from the subscription payment meta and the old token.
 		if ( is_array( $payment_meta_table ) ) {
 			foreach ( $payment_meta_table as $meta ) {
 				foreach ( $meta as $meta_key => $meta_data ) {
 					if ( $old_token->get_token() === $meta_data['value'] ) {
-						$token_meta_key = $meta_key;
+						$subscription->update_meta_data( $meta_key, $new_token->get_token() );
+						$subscription->save();
 						break 2;
 					}
 				}
 			}
 		}
-
-		$subscription->update_meta_data( $token_meta_key, $new_token->get_token() );
-		$subscription->save();
 
 		// Copy the new token to the last renewal order if it needs payment so the retry system will pick up the new method.
 		$last_renewal_order = $subscription->get_last_order( 'all', 'renewal' );
